tucan/parser/tucanParser.py
# Generated from tucan.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tucanParser ( Parser ):

    grammarFileName = "tucan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/'", "'TUCANv'", "'.'", "'H'", "'He'", 
                     "'Li'", "'Be'", "'B'", "'C'", "'N'", "'O'", "'F'", 
                     "'Ne'", "'Na'", "'Mg'", "'Al'", "'Si'", "'P'", "'S'", 
                     "'Cl'", "'Ar'", "'K'", "'Ca'", "'Sc'", "'Ti'", "'V'", 
                     "'Cr'", "'Mn'", "'Fe'", "'Co'", "'Ni'", "'Cu'", "'Zn'", 
                     "'Ga'", "'Ge'", "'As'", "'Se'", "'Br'", "'Kr'", "'Rb'", 
                     "'Sr'", "'Y'", "'Zr'", "'Nb'", "'Mo'", "'Tc'", "'Ru'", 
                     "'Rh'", "'Pd'", "'Ag'", "'Cd'", "'In'", "'Sn'", "'Sb'", 
                     "'Te'", "'I'", "'Xe'", "'Cs'", "'Ba'", "'La'", "'Ce'", 
                     "'Pr'", "'Nd'", "'Pm'", "'Sm'", "'Eu'", "'Gd'", "'Tb'", 
                     "'Dy'", "'Ho'", "'Er'", "'Tm'", "'Yb'", "'Lu'", "'Hf'", 
                     "'Ta'", "'W'", "'Re'", "'Os'", "'Ir'", "'Pt'", "'Au'", 
                     "'Hg'", "'Tl'", "'Pb'", "'Bi'", "'Po'", "'At'", "'Rn'", 
                     "'Fr'", "'Ra'", "'Ac'", "'Th'", "'Pa'", "'U'", "'Np'", 
                     "'Pu'", "'Am'", "'Cm'", "'Bk'", "'Cf'", "'Es'", "'Fm'", 
                     "'Md'", "'No'", "'Lr'", "'Rf'", "'Db'", "'Sg'", "'Bh'", 
                     "'Hs'", "'Mt'", "'Ds'", "'Rg'", "'Cn'", "'Nh'", "'Fl'", 
                     "'Mc'", "'Lv'", "'Ts'", "'Og'", "'('", "'-'", "')'", 
                     "':'", "','", "'='", "'mass'", "'rad'", "'0'", "'1'", 
                     "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "GREATER_THAN_NINE" ]

    RULE_tucan = 0
    RULE_version = 1
    RULE_sum_formula_start = 2
    RULE_sum_formula = 3
    RULE_with_carbon = 4
    RULE_without_carbon = 5
    RULE_h = 6
    RULE_he = 7
    RULE_li = 8
    RULE_be = 9
    RULE_b = 10
    RULE_c = 11
    RULE_n = 12
    RULE_o = 13
    RULE_f = 14
    RULE_ne = 15
    RULE_na = 16
    RULE_mg = 17
    RULE_al = 18
    RULE_si = 19
    RULE_p = 20
    RULE_s = 21
    RULE_cl = 22
    RULE_ar = 23
    RULE_k = 24
    RULE_ca = 25
    RULE_sc = 26
    RULE_ti = 27
    RULE_v = 28
    RULE_cr = 29
    RULE_mn = 30
    RULE_fe = 31
    RULE_co = 32
    RULE_ni = 33
    RULE_cu = 34
    RULE_zn = 35
    RULE_ga = 36
    RULE_ge = 37
    RULE_as = 38
    RULE_se = 39
    RULE_br = 40
    RULE_kr = 41
    RULE_rb = 42
    RULE_sr = 43
    RULE_y = 44
    RULE_zr = 45
    RULE_nb = 46
    RULE_mo = 47
    RULE_tc = 48
    RULE_ru = 49
    RULE_rh = 50
    RULE_pd = 51
    RULE_ag = 52
    RULE_cd = 53
    RULE_in = 54
    RULE_sn = 55
    RULE_sb = 56
    RULE_te = 57
    RULE_i = 58
    RULE_xe = 59
    RULE_cs = 60
    RULE_ba = 61
    RULE_la = 62
    RULE_ce = 63
    RULE_pr = 64
    RULE_nd = 65
    RULE_pm = 66
    RULE_sm = 67
    RULE_eu = 68
    RULE_gd = 69
    RULE_tb = 70
    RULE_dy = 71
    RULE_ho = 72
    RULE_er = 73
    RULE_tm = 74
    RULE_yb = 75
    RULE_lu = 76
    RULE_hf = 77
    RULE_ta = 78
    RULE_w = 79
    RULE_re = 80
    RULE_os = 81
    RULE_ir = 82
    RULE_pt = 83
    RULE_au = 84
    RULE_hg = 85
    RULE_tl = 86
    RULE_pb = 87
    RULE_bi = 88
    RULE_po = 89
    RULE_at = 90
    RULE_rn = 91
    RULE_fr = 92
    RULE_ra = 93
    RULE_ac = 94
    RULE_th = 95
    RULE_pa = 96
    RULE_u = 97
    RULE_np = 98
    RULE_pu = 99
    RULE_am = 100
    RULE_cm = 101
    RULE_bk = 102
    RULE_cf = 103
    RULE_es = 104
    RULE_fm = 105
    RULE_md = 106
    RULE_no = 107
    RULE_lr = 108
    RULE_rf = 109
    RULE_db = 110
    RULE_sg = 111
    RULE_bh = 112
    RULE_hs = 113
    RULE_mt = 114
    RULE_ds = 115
    RULE_rg = 116
    RULE_cn = 117
    RULE_nh = 118
    RULE_fl = 119
    RULE_mc = 120
    RULE_lv = 121
    RULE_ts = 122
    RULE_og = 123
    RULE_count = 124
    RULE_tuples_start = 125
    RULE_tuples = 126
    RULE_tuple = 127
    RULE_node_index = 128
    RULE_node_attributes_start = 129
    RULE_node_attributes = 130
    RULE_node_attribute = 131
    RULE_node_property = 132
    RULE_node_property_key = 133
    RULE_node_property_value = 134
    RULE_zero_or_greater = 135
    RULE_greater_than_zero = 136
    RULE_greater_than_one = 137

    ruleNames =  [ "tucan", "version", "sum_formula_start", "sum_formula", 
                   "with_carbon", "without_carbon", "h", "he", "li", "be", 
                   "b", "c", "n", "o", "f", "ne", "na", "mg", "al", "si", 
                   "p", "s", "cl", "ar", "k", "ca", "sc", "ti", "v", "cr", 
                   "mn", "fe", "co", "ni", "cu", "zn", "ga", "ge", "as", 
                   "se", "br", "kr", "rb", "sr", "y", "zr", "nb", "mo", 
                   "tc", "ru", "rh", "pd", "ag", "cd", "in", "sn", "sb", 
                   "te", "i", "xe", "cs", "ba", "la", "ce", "pr", "nd", 
                   "pm", "sm", "eu", "gd", "tb", "dy", "ho", "er", "tm", 
                   "yb", "lu", "hf", "ta", "w", "re", "os", "ir", "pt", 
                   "au", "hg", "tl", "pb", "bi", "po", "at", "rn", "fr", 
                   "ra", "ac", "th", "pa", "u", "np", "pu", "am", "cm", 
                   "bk", "cf", "es", "fm", "md", "no", "lr", "rf", "db", 
                   "sg", "bh", "hs", "mt", "ds", "rg", "cn", "nh", "fl", 
                   "mc", "lv", "ts", "og", "count", "tuples_start", "tuples", 
                   "tuple", "node_index", "node_attributes_start", "node_attributes", 
                   "node_attribute", "node_property", "node_property_key", 
                   "node_property_value", "zero_or_greater", "greater_than_zero", 
                   "greater_than_one" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    GREATER_THAN_NINE=140

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TucanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(tucanParser.VersionContext,0)


        def sum_formula(self):
            return self.getTypedRuleContext(tucanParser.Sum_formulaContext,0)


        def tuples(self):
            return self.getTypedRuleContext(tucanParser.TuplesContext,0)


        def EOF(self):
            return self.getToken(tucanParser.EOF, 0)

        def node_attributes(self):
            return self.getTypedRuleContext(tucanParser.Node_attributesContext,0)


        def getRuleIndex(self):
            return tucanParser.RULE_tucan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTucan" ):
                listener.enterTucan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTucan" ):
                listener.exitTucan(self)




    def tucan(self):

        localctx = tucanParser.TucanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tucan)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 276
            self.version()
            self.state = 277
            self.match(tucanParser.T__0)
            self.state = 278
            self.sum_formula()
            self.state = 279
            self.match(tucanParser.T__0)
            self.state = 280
            self.tuples()
            self.state = 283
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 281
                self.match(tucanParser.T__0)
                self.state = 282
                self.node_attributes()


            self.state = 285
            self.match(tucanParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def zero_or_greater(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tucanParser.Zero_or_greaterContext)
            else:
                return self.getTypedRuleContext(tucanParser.Zero_or_greaterContext,i)


        def getRuleIndex(self):
            return tucanParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = tucanParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 287
            self.match(tucanParser.T__1)
            self.state = 288
            self.zero_or_greater()
            self.state = 289
            self.match(tucanParser.T__2)
            self.state = 290
            self.zero_or_greater()
            self.state = 291
            self.match(tucanParser.T__2)
            self.state = 292
            self.zero_or_greater()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sum_formula_startContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sum_formula(self):
            return self.getTypedRuleContext(tucanParser.Sum_formulaContext,0)


        def EOF(self):
            return self.getToken(tucanParser.EOF, 0)

        def getRuleIndex(self):
            return tucanParser.RULE_sum_formula_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum_formula_start" ):
                listener.enterSum_formula_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum_formula_start" ):
                listener.exitSum_formula_start(self)




    def sum_formula_start(self):

        localctx = tucanParser.Sum_formula_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sum_formula_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 294
            self.sum_formula()
            self.state = 295
            self.match(tucanParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sum_formulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def with_carbon(self):
            return self.getTypedRuleContext(tucanParser.With_carbonContext,0)


        def without_carbon(self):
            return self.getTypedRuleContext(tucanParser.Without_carbonContext,0)


        def getRuleIndex(self):
            return tucanParser.RULE_sum_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum_formula" ):
                listener.enterSum_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum_formula" ):
                listener.exitSum_formula(self)




    def sum_formula(self):

        localctx = tucanParser.Sum_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sum_formula)
        try:
            self.state = 299
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 297
                self.with_carbon()
                pass
            elif token in [-1, 1, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121]:
                self.enterOuterAlt(localctx, 2)
                self.state = 298
                self.without_carbon()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class With_carbonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def c(self):
            return self.getTypedRuleContext(tucanParser.CContext,0)


        def h(self):
            return self.getTypedRuleContext(tucanParser.HContext,0)


        def ac(self):
            return self.getTypedRuleContext(tucanParser.AcContext,0)


        def ag(self):
            return self.getTypedRuleContext(tucanParser.AgContext,0)


        def al(self):
            return self.getTypedRuleContext(tucanParser.AlContext,0)


        def am(self):
            return self.getTypedRuleContext(tucanParser.AmContext,0)


        def ar(self):
            return self.getTypedRuleContext(tucanParser.ArContext,0)


        def as_(self):
            return self.getTypedRuleContext(tucanParser.AsContext,0)


        def at(self):
            return self.getTypedRuleContext(tucanParser.AtContext,0)


        def au(self):
            return self.getTypedRuleContext(tucanParser.AuContext,0)


        def b(self):
            return self.getTypedRuleContext(tucanParser.BContext,0)


        def ba(self):
            return self.getTypedRuleContext(tucanParser.BaContext,0)


        def be(self):
            return self.getTypedRuleContext(tucanParser.BeContext,0)


        def bh(self):
            return self.getTypedRuleContext(tucanParser.BhContext,0)


        def bi(self):
            return self.getTypedRuleContext(tucanParser.BiContext,0)


        def bk(self):
            return self.getTypedRuleContext(tucanParser.BkContext,0)


        def br(self):
            return self.getTypedRuleContext(tucanParser.BrContext,0)


        def ca(self):
            return self.getTypedRuleContext(tucanParser.CaContext,0)


        def cd(self):
            return self.getTypedRuleContext(tucanParser.CdContext,0)


        def ce(self):
            return self.getTypedRuleContext(tucanParser.CeContext,0)


        def cf(self):
            return self.getTypedRuleContext(tucanParser.CfContext,0)


        def cl(self):
            return self.getTypedRuleContext(tucanParser.ClContext,0)


        def cm(self):
            return self.getTypedRuleContext(tucanParser.CmContext,0)


        def cn(self):
            return self.getTypedRuleContext(tucanParser.CnContext,0)


        def co(self):
            return self.getTypedRuleContext(tucanParser.CoContext,0)


        def cr(self):
            return self.getTypedRuleContext(tucanParser.CrContext,0)


        def cs(self):
            return self.getTypedRuleContext(tucanParser.CsContext,0)


        def cu(self):
            return self.getTypedRuleContext(tucanParser.CuContext,0)


        def db(self):
            return self.getTypedRuleContext(tucanParser.DbContext,0)


        def ds(self):
            return self.getTypedRuleContext(tucanParser.DsContext,0)


        def dy(self):
            return self.getTypedRuleContext(tucanParser.DyContext,0)


        def er(self):
            return self.getTypedRuleContext(tucanParser.ErContext,0)


        def es(self):
            return self.getTypedRuleContext(tucanParser.EsContext,0)


        def eu(self):
            return self.getTypedRuleContext(tucanParser.EuContext,0)


        def f(self):
            return self.getTypedRuleContext(tucanParser.FContext,0)


        def fe(self):
            return self.getTypedRuleContext(tucanParser.FeContext,0)


        def fl(self):
            return self.getTypedRuleContext(tucanParser.FlContext,0)


        def fm(self):
            return self.getTypedRuleContext(tucanParser.FmContext,0)


        def fr(self):
            return self.getTypedRuleContext(tucanParser.FrContext,0)


        def ga(self):
            return self.getTypedRuleContext(tucanParser.GaContext,0)


        def gd(self):
            return self.getTypedRuleContext(tucanParser.GdContext,0)


        def ge(self):
            return self.getTypedRuleContext(tucanParser.GeContext,0)


        def he(self):
            return self.getTypedRuleContext(tucanParser.HeContext,0)


        def hf(self):
            return self.getTypedRuleContext(tucanParser.HfContext,0)


        def hg(self):
            return self.getTypedRuleContext(tucanParser.HgContext,0)


        def ho(self):
            return self.getTypedRuleContext(tucanParser.HoContext,0)


        def hs(self):
            return self.getTypedRuleContext(tucanParser.HsContext,0)


        def i(self):
            return self.getTypedRuleContext(tucanParser.IContext,0)


        def in_(self):
            return self.getTypedRuleContext(tucanParser.InContext,0)


        def ir(self):
            return self.getTypedRuleContext(tucanParser.IrContext,0)


        def k(self):
            return self.getTypedRuleContext(tucanParser.KContext,0)


        def kr(self):
            return self.getTypedRuleContext(tucanParser.KrContext,0)


        def la(self):
            return self.getTypedRuleContext(tucanParser.LaContext,0)


        def li(self):
            return self.getTypedRuleContext(tucanParser.LiContext,0)


        def lr(self):
            return self.getTypedRuleContext(tucanParser.LrContext,0)


        def lu(self):
            return self.getTypedRuleContext(tucanParser.LuContext,0)


        def lv(self):
            return self.getTypedRuleContext(tucanParser.LvContext,0)


        def mc(self):
            return self.getTypedRuleContext(tucanParser.McContext,0)


        def md(self):
            return self.getTypedRuleContext(tucanParser.MdContext,0)


        def mg(self):
            return self.getTypedRuleContext(tucanParser.MgContext,0)


        def mn(self):
            return self.getTypedRuleContext(tucanParser.MnContext,0)


        def mo(self):
            return self.getTypedRuleContext(tucanParser.MoContext,0)


        def mt(self):
            return self.getTypedRuleContext(tucanParser.MtContext,0)


        def n(self):
            return self.getTypedRuleContext(tucanParser.NContext,0)


        def na(self):
            return self.getTypedRuleContext(tucanParser.NaContext,0)


        def nb(self):
            return self.getTypedRuleContext(tucanParser.NbContext,0)


        def nd(self):
            return self.getTypedRuleContext(tucanParser.NdContext,0)


        def ne(self):
            return self.getTypedRuleContext(tucanParser.NeContext,0)


        def nh(self):
            return self.getTypedRuleContext(tucanParser.NhContext,0)


        def ni(self):
            return self.getTypedRuleContext(tucanParser.NiContext,0)


        def no(self):
            return self.getTypedRuleContext(tucanParser.NoContext,0)


        def np(self):
            return self.getTypedRuleContext(tucanParser.NpContext,0)


        def o(self):
            return self.getTypedRuleContext(tucanParser.OContext,0)


        def og(self):
            return self.getTypedRuleContext(tucanParser.OgContext,0)


        def os(self):
            return self.getTypedRuleContext(tucanParser.OsContext,0)


        def p(self):
            return self.getTypedRuleContext(tucanParser.PContext,0)


        def pa(self):
            return self.getTypedRuleContext(tucanParser.PaContext,0)


        def pb(self):
            return self.getTypedRuleContext(tucanParser.PbContext,0)


        def pd(self):
            return self.getTypedRuleContext(tucanParser.PdContext,0)


        def pm(self):
            return self.getTypedRuleContext(tucanParser.PmContext,0)


        def po(self):
            return self.getTypedRuleContext(tucanParser.PoContext,0)


        def pr(self):
            return self.getTypedRuleContext(tucanParser.PrContext,0)


        def pt(self):
            return self.getTypedRuleContext(tucanParser.PtContext,0)


        def pu(self):
            return self.getTypedRuleContext(tucanParser.PuContext,0)


        def ra(self):
            return self.getTypedRuleContext(tucanParser.RaContext,0)


        def rb(self):
            return self.getTypedRuleContext(tucanParser.RbContext,0)


        def re(self):
            return self.getTypedRuleContext(tucanParser.ReContext,0)


        def rf(self):
            return self.getTypedRuleContext(tucanParser.RfContext,0)


        def rg(self):
            return self.getTypedRuleContext(tucanParser.RgContext,0)


        def rh(self):
            return self.getTypedRuleContext(tucanParser.RhContext,0)


        def rn(self):
            return self.getTypedRuleContext(tucanParser.RnContext,0)


        def ru(self):
            return self.getTypedRuleContext(tucanParser.RuContext,0)

